[package]
name = "restful"
version = "0.1.0"
edition = "2024"

[dependencies]
# cargo add ammonia
# cargo add axum
# cargo add axum-csrf
# cargo add axum-governor
# cargo add axum-response-cache
# cargo add axum-server --features tls-rustls
# cargo add axum-valid
# cargo add chrono --features serde
# cargo add jsonwebtoken
# cargo add http
# cargo add hyper --features full
# cargo add serde --features derive
# cargo add tokio --features full
# cargo add tower --features limit, buffer
# cargo add tower-http --features cors, limit, timeout, trace
# cargo add tracing
# cargo add tracing-subscriber
# cargo add validator --features derive

# trc
# bytes = "1"
# log = "0.4"
# env_logger = "0.10"

# auth
# anyhow = "1.0"
# lazy_static = "1.4"

# rate limit
# lazy-limit = "2"      # Use the latest version
# real = { version = "0.5", features = ["axum"] } # Use the latest version with axum feature
