[package]
name = "restful"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1.2" # cargo add ammonia
axum = "0.8.8" # cargo add axum
axum_csrf = "0.11.0" # cargo add axum-csrf
axum-governor = "1.0.3" # cargo add axum-governor
axum-response-cache = "0.4.0" # cargo add axum-response-cache
axum-server = { version = "0.8.0", features = ["tls-rustls"] } # cargo add axum-server --features tls-rustls
axum_thiserror = "0.1.0"
axum-valid = "0.24.0" # cargo add axum-valid
chrono = { version = "0.4.43", features = ["serde"] } # cargo add chrono --features serde
figment = { version = "0.10.19", features = ["env"] } # cargo add figment --features env
get_fields = "0.1.0" # cargo add get_fields
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] } # cargo add jsonwebtoken --features aws_lc_rs
# http = { version = "1.4.0", features = ["std"] } # cargo add http --features std
http-body-util = "0.1.3" # cargo add http-body-util
# hyper = { version = "1.8.1", features = ["full"] } # cargo add hyper --features full
serde = { version = "1.0.228", features = ["derive"] } # cargo add serde --features derive
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] } # cargo add tokio --features full
tower = { version = "0.5.3", features = ["limit", "buffer"] } # cargo add tower --features limit,buffer
tower-http = { version = "0.6.8", features = ["cors", "limit", "timeout", "trace"] } # cargo add tower-http --features cors,limit,timeout,trace
tracing = "0.1.44" # cargo add tracing
tracing-subscriber = "0.3.22" # cargo add tracing-subscriber
validator = { version = "0.20.0", features = ["derive"] } # cargo add validator --features derive
temp-env = "0.3.6"
serial_test = "3.3.1"

# trc
# bytes = "1"
# log = "0.4"
# env_logger = "0.10"

# auth
# anyhow = "1.0"
# lazy_static = "1.4"

# rate limit
# lazy-limit = "2"      # Use the latest version
# real = { version = "0.5", features = ["axum"] } # Use the latest version with axum feature
