[package]
name = "x-learnrust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
# tls
# [dependencies]
# axum = "0.7"
# axum-server = { version = "0.6", features = ["tls-rustls"] }
# tokio = { version = "1", features = ["full"] }
# # serde and serde_json might be useful for a REST app
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"

# log
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# hyper = { version = "0.14", features = ["full"] }
# bytes = "1"
# tracing = "0.1"
# tracing-subscriber = "0.3"

# auth
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# jsonwebtoken = "9"
# tower-http = { version = "0.5", features = ["full"] }
# once_cell = "1"
# anyhow = "1"
# http = "1"

# cache
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# axum-response-cache = "0.3" # Use the latest version
# cached = { version = "0.45", features = ["timed-sixed-cache"] } # Use the latest version

# cors
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }

# csrf
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# tower-http = { version = "0.4", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# askama = "0.12" # For rendering HTML templates
# async-session = "3.0"
# axum-sessions = "0.6"
# axum-csrf = "0.1" # The CSRF library

# xss
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# ammonia = "4.0" # Use the latest version
# askama = "0.12" # A popular Rust templating engine
# tower-http = { version = "0.5", features = ["fs"] } # For serving static files

# valid
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# validator = { version = "0.18", features = ["derive"] }
# axum-valid = "0.9" # Provides Valid extractor
# askama = { version = "0.12", features = ["with-axum"] } # Provides automatic HTML escaping
# askama_axum = "0.3"

# request rate limiting
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# axum-governor = "0.2" # use the latest version
# lazy-limit = "1" # use the latest version
# real = { version = "0.1", features = ["axum"] } # use the latest version
# tower = "0.4"

# response size limiting
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }

# response time limiting
# [dependencies]
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# tower = { version = "0.4", features = ["full"] }
# tower-http = { version = "0.5", features = ["timeout"] }
# http = "1.0"
